--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ div#fer,
 		padding: 0;
 	}
 	.ret {
-		font-size: 20px;
+		font-size: 21px;
 		font-weight: 500;
 	}
 }
@@ -211,6 +211,14 @@ div#fer,
 
 #again {
 	margin: 30px 0 0;
+}
+
+@media only screen and (max-width: 900px) {
+	.error {
+		font-size: 30px;
+		padding: 66px 20px;
+		height: 44%;
+	}
 }
 
 /*  Basic Styling To Override Default For Basic HTML Elements */
